# threadbook

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  package-lock.json  package.json
crates/wardrobe-core/: Cargo.toml  build.rs
crates/wardrobe-core/src/: backup.rs  bindings.rs  catalog.rs  contracts.rs  deletion.rs  diagnostics_backend.rs  gmail_connector.rs  lib.rs  model_policy.rs  outfit.rs  photo_analysis.rs  photokit_connector.rs  ports.rs  receipt.rs  receipt_intelligence.rs  receipt_promotion.rs  recommendation.rs  reconciliation.rs  secret.rs  service.rs  try_on.rs  update.rs  validation.rs
crates/wardrobe-core/tests/: catalog_service.rs  contracts.rs  deletion_contracts.rs  diagnostics_export_contracts.rs  gmail_connector_contracts.rs  gmail_connector_service.rs  local_only_contracts.rs  model_policy_bindings.rs  photo_analysis_contracts.rs  photo_analysis_provider.rs  photo_analysis_service.rs  photokit_contracts.rs  photokit_service.rs  receipt_contracts.rs  receipt_image_contracts.rs  receipt_image_service.rs  receipt_intelligence_contracts.rs  receipt_intelligence_states.rs  receipt_promotion_contracts.rs  receipt_service.rs  recommendation_contracts.rs  recommendation_validator.rs  reconciliation_contracts.rs  reconciliation_service.rs  service.rs  try_on_contracts.rs  update_contracts.rs
crates/wardrobe-platform/: Cargo.toml  build.rs
crates/wardrobe-platform/examples/: p09_update_smoke.rs
crates/wardrobe-platform/migrations/: 0001_foundation.sha256  0001_foundation.sql  0002_manual_catalog.sha256  0002_manual_catalog.sql  0003_receipts.sha256  0003_receipts.sql  0004_receipt_images.sha256  0004_receipt_images.sql  0005_photo_analysis.sha256  0005_photo_analysis.sql  0006_reconciliation.sha256  0006_reconciliation.sql  0007_gmail_connector.sha256  0007_gmail_connector.sql  0008_outfits.sha256  0008_outfits.sql  0009_outfit_recommendations.sha256  0009_outfit_recommendations.sql  0010_try_on.sha256  0010_try_on.sql  0011_hard_deletion.sha256  0011_hard_deletion.sql  0012_photokit_connector.sha256  0012_photokit_connector.sql  0013_local_only_disconnect.sha256  0013_local_only_disconnect.sql  0014_photo_owner_authority.sha256  0014_photo_owner_authority.sql  0015_gmail_query_discovery.sha256  0015_gmail_query_discovery.sql  0016_receipt_intelligence.sha256  0016_receipt_intelligence.sql  0017_receipt_purchase_unit_promotion.sha256  0017_receipt_purchase_unit_promotion.sql
crates/wardrobe-platform/src/: backup_repository.rs  blob.rs  catalog_repository.rs  credential.rs  database.rs  deletion_repository.rs  diagnostics.rs  diagnostics_export.rs  error.rs  gmail_connector.rs  gmail_http.rs  gmail_repository.rs  gmail_sync.rs  imports.rs  lib.rs  local_only.rs  maintenance.rs  outfit_recommendation_http.rs  outfit_recommendation_provider.rs  outfit_recommendation_repository.rs  outfit_recommender.rs  outfit_repository.rs  paths.rs  person_detection_native.rs  person_repository.rs  photo_repository.rs  photokit_connector_runtime.rs  photokit_coordinator.rs  photokit_keychain.rs  photokit_native.rs  photokit_repository.rs  receipt_image_downloader.rs  receipt_intelligence_coordinator.rs  receipt_intelligence_coordinator_tests.rs  receipt_intelligence_provider.rs  receipt_intelligence_repository.rs  receipt_intelligence_repository_tests.rs  receipt_parser.rs  receipt_promotion_repository.rs  receipt_promotion_repository_tests.rs  (+10 more)
crates/wardrobe-platform/tests/: build_metadata.rs  local_only_store.rs  outfit_recommendation_http.rs  outfit_recommendation_provider.rs  outfit_repository.rs  person_detection_repository.rs  photo_analysis_repository.rs  photokit_connector_migration.rs  photokit_connector_repository.rs  photokit_native_adapter.rs  receipt_image_downloader.rs  receipt_image_repository.rs  receipt_intelligence_provider.rs  receipt_parser_provider.rs  reconciliation_repository.rs  try_on_http.rs  try_on_repository.rs
docs/: HANDOFF.md
spikes/p00-durable-jobs/: Cargo.toml
spikes/p00-durable-jobs/src/: lib.rs  model.rs  sqlite.rs
spikes/p00-durable-jobs/tests/: crash_recovery.rs
spikes/p00-openai-provider/: Cargo.toml
spikes/p00-photokit-materialization/: Cargo.toml
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  local_only.rs  main.rs  release_manifest.rs
(+390 files in other folders)
