[package]
name = "wardrobe-desktop"
version = "0.1.0"
description = "Local-first personal wardrobe application"
authors = ["Dev Rai"]
edition = "2021"
license = "UNLICENSED"

[lib]
name = "wardrobe_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
time = { version = "0.3", features = ["formatting"] }
wardrobe-core = { path = "../crates/wardrobe-core" }
wardrobe-platform = { path = "../crates/wardrobe-platform", features = ["photokit-native"] }

[dev-dependencies]
sha2 = "0.10"
tempfile = "3"
