[package]
name = "wardrobe-core"
version = "0.1.0"
edition = "2021"
description = "Domain contracts and application services for Wardrobe"
license = "UNLICENSED"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
time = { version = "0.3", features = ["parsing"] }
ts-rs = { version = "11", features = ["no-serde-warnings"] }
uuid = { version = "1", features = ["serde", "v4"] }
zeroize = "1"

[dev-dependencies]
serde_json = "1"
