[package]
name = "wardrobe-platform"
version = "0.1.0"
edition = "2021"
publish = false
license = "UNLICENSED"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[features]
default = []
photokit-native = []

[dependencies]
base64 = "0.22"
chacha20poly1305 = "0.10"
getrandom = "0.2"
html5ever = "=0.38.0"
hickory-resolver = { version = "=0.26.1", default-features = false, features = ["system-config", "tokio"] }
image = { version = "=0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
hmac = "0.12"
ipnet = "2"
libc = "0.2"
mail-parser = "=0.11.5"
reqwest = { version = "=0.13.4", default-features = false, features = ["multipart", "rustls"] }
ring = "=0.17.14"
rusqlite = { version = "0.38.0", features = ["backup", "bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "=1.52.3", features = ["fs", "io-util", "macros", "net", "rt", "sync", "time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
wardrobe-core = { path = "../wardrobe-core" }
zeroize = "1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7"
security-framework-sys = "2.17"

[dev-dependencies]
base64 = "0.22"
rustls = "0.23"
tempfile = "3"
tokio-rustls = "0.26"
toml = "0.8"
