[package]
name = "p00-durable-jobs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
libc = "0.2"
tempfile = "3"

[[bin]]
name = "p00-job-helper"
path = "src/bin/p00-job-helper.rs"
