[package]
name = "p00-photokit-materialization"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
libc = "0.2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "contract"
path = "tests/contract.rs"
